page reg padding buttoins

--- a/custom.css
+++ b/custom.css
@@ -2070,7 +2070,7 @@ table th {
 }
 
 #page-tools .context-links, a:active, #right .context-links a:active { background-position:0px 100%; }
-#page-tools .context-links, #right .context-links { padding: 0; } 
+#page-tools .context-links, #right .context-links { padding: 0; padding-bottom: 10px; } 
 #page-tools .context-links ul ,#right .context-links ul { margin-bottom: 0; }
 
 #right .page-region .block .block-title {
