--- a/thorsten.css
+++ b/thorsten.css
@@ -612,8 +612,10 @@ display: none;
 display: none;
 }
 
+#ueberschriftmetaprojekth2 {
+  margin-bottom: 10px;
+}
 
-/* bottom-abstand auf newsseite anpassung*/
-.node-event h2.node-title {
-  margin-bottom: 20px !important;
+#ueberschriftnewshomeh2 {
+  margin-bottom: 10px;
 }
