--- a/thorsten.css
+++ b/thorsten.css
@@ -614,11 +614,11 @@ display: none;
 
 
 #ueberschriftmetaprojekth2 {
-  margin-bottom: 10px;
+  margin-bottom: 20px !important;
 }
 
 #ueberschriftnewshomeh2 {
-  margin-bottom: 10px;
+  margin-bottom: 20px !important;
 }
 
 /*
