--- a/update.css
+++ b/update.css
@@ -497,7 +497,7 @@ div.node .field .field-label-inline-first {
   margin: 0 10px 5px 0;
 }
 
-div.node .field .field-label-inline {focus
+div.node .field .field-label-inline {
   font-size: 10px;
   padding: 0px 5px;
   width: 150px !important;
