modificated vor und zurueck button

--- a/thorsten.css
+++ b/thorsten.css
@@ -323,7 +323,7 @@ padding: 0px;
 }
 
 /* Modification of Vor und Zurueck-Button at User-Activity*/
-.page-region .pager.minipager.clear-block .links .pager-next.last.active {
+.page-region .view.view-activity-listing .pager.minipager.clear-block .links .pager-next.last.active{
 background-image: url("img/arrow-right.jpg");
 width: 13px;
 background-repeat: no-repeat;
@@ -331,11 +331,11 @@ top: 3px;
 right: 9px;
 }
 
-.page-region .pager.minipager.clear-block .links .pager-next.last.active a:hover {
+.page-region .view.view-activity-listing .pager.minipager.clear-block .links .pager-next.last.active a:hover {
 background: transparent;
 }
 
-.page-region .pager.minipager.clear-block .links .pager-previous.first.active {
+.page-region .view.view-activity-listing .pager.minipager.clear-block .links .pager-previous.first.active{
 background-image: url("img/arrow-left.jpg");
 width: 13px;
 background-repeat: no-repeat;
@@ -343,7 +343,7 @@ top: 3px;
 left: 11px;
 }
 
-.page-region .pager.minipager.clear-block .links .pager-previous.first.active a:hover {
+.page-region .view.view-activity-listing .pager.minipager.clear-block .links .pager-previous.first.active a:hover {
 background: transparent;
 }
 
