--- a/thorsten.css
+++ b/thorsten.css
@@ -352,17 +352,17 @@ padding: 0px;
 	background-color: #441a4d;
 }
 
-#footer #block-block-5{			/*Verlaufsbild oberhalb*/
+#footer block-boxes-footer_information_links {			/*Verlaufsbild oberhalb*/
 	background: #84389C url("img/footer_verlauf.jpg") repeat-x scroll 0 0;	/*<--Adresse ändern*/
 	padding-top: 18px;
 	border-radius: 0;		
 }
 
-#footer #block-block-5 a {   
+#footer block-boxes-footer_information_links a {   
 	color: #FFFFFF;
 }
 
-#footer #block-block-5 img {		/*Icons nach oben und links verschieben*/
+#footer block-boxes-footer_information_links img {		/*Icons nach oben und links verschieben*/
 	margin-top: -25px;  		
 	margin-right: 10px;  
 }
@@ -572,8 +572,12 @@ color: #fff;
 
 
 /* Zurueck zum Foederschwerpunkt Logo */
-#header #block-block-8 {
+#header #boxes-box-zurueckzufoerderschwerpunkt {
   margin-left: -845px;
+}
+
+#header #boxes-box-zurueckzufoerderschwerpunkt div.boxes-box-controls{
+  display: none;
 }
 
 /*Kalender fehlt Abstand nach unten*/
