--- a/custom.css
+++ b/custom.css
@@ -1111,7 +1111,7 @@ padding: 0;
 
 #footer .limiter {
 	padding: 0;
-	background-color: #84389C;
+	background-color: #4e2158;
 }
 
 #footer .block-content {
@@ -1862,7 +1862,7 @@ margin-left: 0.4em;
 	margin-bottom: 8px;
 	line-height: 22px;
 	text-indent: 0;
-	width: 65%;
+	width: 614px; /*Vorher 65%*/
 	float: left;
 }
 
