--- a/thorsten.css
+++ b/thorsten.css
@@ -575,11 +575,11 @@ color: #fff;
 }
 
 
-/* Zurueck zum Foederschwerpunkt Logo ALT!!!!
+/* Zurueck zum Foederschwerpunkt Logo ALT!!!! */
 #header #block-block-8 {
   margin-left: -845px;
 }
-*/
+
 
 
 /* Zurueck zum Foederschwerpunkt Logo Neu*/
