--- a/thorsten.css
+++ b/thorsten.css
@@ -888,3 +888,9 @@ margin-bottom: 5px;
 .view-display-id-attachment_1 .view-content .views-field.views-field-date.date {
 white-space: normal;
 }
+
+
+/*test*/
+body.tao {
+background-color: red !important;
+}
