--- a/update.css
+++ b/update.css
@@ -174,7 +174,7 @@ body table { font-size: 11px; line-height: 16px; border: 0; background: 0; }
 #search, #search-block-form { background: url(img/bg/search.jpg) no-repeat !important; width: 220px; height: 40px;  }
 #search label { display: none; }
 #edit-search-theme-form-1-wrapper { float: left; display: inline-block; margin: 0; padding: 10px 0px 0px 40px; width: 160px; }
-#edit-search-theme-form-1 { border: none !important; line-height: 15px !important; background: transparent !important; font-size: 11px !important; color: #404040; width: 185px; height: 17px !important; } /*changed padding-left from 5px to 1px*/
+#edit-search-theme-form-1 { border: none !important; line-height: 15px !important; background: transparent !important; font-size: 11px !important; color: #404040; width: 185px; height: 17px !important; font-family: Arial; } /*changed padding-left from 5px to 1px*/
 #edit-search-wrapper, #edit-search-1-wrapper { float: left; display: inline-block; margin: 0; padding: 0; width: 200px; }
 #edit-search, #edit-search-1{ border: none !important; line-height: 22px !important; background: transparent !important; font-size: 16px !important; color: #404040; width: 185px; margin: 4px 0 0 5px !important; padding: 0; height: 22px !important; }
 #search .form-submit { background: transparent !important; width: 30px !important; height: 30px !important; margin: 5px 0px 0px -195px !important; padding: 0 !important; border: 0 !important; text-indent: 900px; overflow: hidden; cursor: pointer; /*visibility:hidden*/ -webkit-box-shadow: none; position: relative;} /*position new*/
